Make fixes to the spacing in the CSS

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ html {
   line-height: 1.5;
 }
 
-*, *::before, *::after{
+*, *::before, *::after {
   box-sizing: inherit;
 }
 
@@ -16,9 +16,9 @@ html {
   text-align: center;
 }
 
-.cards li{
+.cards li {
   display: inline-block;
-  margin: 0.5em 1em;
+  margin: .5em 1em;
   max-width: 20em;
   padding: 1em;
   background-color: #fff;
@@ -27,38 +27,38 @@ html {
   text-align: left;
 }
 
-.cards img{
+.cards img {
   display: block;
   margin: 0 auto 1rem;
 }
 
-.cards strong{
+.cards strong {
   display: block;
   margin-bottom: 1rem;
   font-size: 1.125rem;
 }
 
-.cards dl{
+.cards dl {
   margin-bottom: 1rem;
 }
 
-.cards dt{
+.cards dt {
   display: inline-block;
   width: 6em;
   font-style: italic;
 }
 
-.cards dd{
+.cards dd {
   display: inline-block;
   margin: 0;
   min-width: 9em;
 }
 
-.cards div{
+.cards div {
   text-align: center;
 }
 
-.cards a{
+.cards a {
   display: inline-block;
   padding: .5em .75em;
   background-color: #ccc;
@@ -67,7 +67,7 @@ html {
   text-decoration: none;
 }
 
-.cards a:hover{
+.cards a:hover {
   background-color: #333;
   color: #fff;
 }
